@@ -13,6 +13,8 @@ Revision history for Test-BrewBuild
           perl version header in the results, if not, we add it (fixes #241)
         - if we're using LCD output and the LCD is 4 row by 20 col, display the
           number of test failures (closes #235)
+        - add troubleshooting section in POD to inform how to proceed if
+          installation fails (closes #242)
 
 2.20    2018-04-16
         - modified layout of LCD output to be more conducive of numerous runs
